src/components/Styles/App.css
/*global body styles */
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-y: auto;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  
} 

.tossing {
  animation-name: tossing;
  animation-duration: 3.5s;
  animation-iteration-count: infinite;
  transform-origin: 50% 90%;    

}
@keyframes tossing {
  0% {
    transform: rotate(-3deg);
  }
  50% {
    transform: rotate(3deg);
  }
  100% {
    transform: rotate(-3deg);
  }
} 


@media screen and (max-width: 600px) {
  /* Adjustments for screens 600px and below */

  /* Increase flexibility for Swiper slides */
  .swiper-slide {
    width: auto !important;
    margin-right: 10px; 
  }

  /* Make project cards full width */
  .card1 {
    width: 100%;
    margin-left: 2px !important; 
    margin-right: 10px !important;  
  }

  /* Center align text in project cards */
  .text-start {
    text-align: start !important;
  }

  /* Adjust spacing for GitHub and Live links */
  .card-actions {
    gap: 1rem; 
  }

} 
/*arrow icon sizing */
@media screen and (max-width: 400px) {
  .icon {
    /* Adjust the size of the icon */
    height: 1rem !important;
    padding-top: 10px !important;
  }
}


@media screen and (max-width: 480px) {
  /* Center align the content */
  .navbar {
    flex-direction: column;
    align-items: center;
  }
}

@media screen and (max-width: 340px) {
  /* Center align text and icons */
  .text-container p {
    padding-left: 10px;
    text-align: center;
    
  }

  .footer img {
    width: 100%;
    height: 200px;
  }
  
}

